--- a/src/app/shared/main-header/main-header.component.html
+++ b/src/app/shared/main-header/main-header.component.html
@@ -10,6 +10,13 @@
   </ng-template>
   
   <ng-template pTemplate="end">
-    <button pButton label="Вийти з акаунта"  class="p-button-outlined p-button-sm" (click)="onClick()"></button>
+    <button pButton [label]="getOtherLanguage()" 
+            [icon]="'pi pi-globe'" 
+            class="p-button-outlined p-button-sm me-2"
+            (click)="toggleLanguage()">
+    </button>
+    <button pButton [label]="'header.logout' | translate"  
+            class="p-button-outlined p-button-sm" 
+            (click)="onClick()"></button>
   </ng-template>
 </p-menubar>
